--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     - assets/images/EV 3.png
     - assets/images/EV 2.png
     - assets/images/Group 1967.png
+    - assets/images/arrow.jpeg
+    - assets/images/Group 1969.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
