--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_inset_box_shadow: ^1.0.8
   smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,10 @@ flutter:
     - assets/images/Group 1967.png
     - assets/images/arrow.jpeg
     - assets/images/Group 1969.png
+    - assets/images/Group 1621.png
+    - assets/images/tree.png
+    - assets/images/distance.png
+    - assets/images/Group 892.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
