--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ flutter:
     - assets/images/reserved.png
     - assets/images/calender.png
     - assets/images/gallery.png
+    - assets/images/back.png
+    - assets/images/map.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
