--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   carousel_slider: ^4.0.0
   curved_navigation_bar: ^1.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
