added payment screen and payment successful screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/gallery.png
     - assets/images/back.png
     - assets/images/map.png
+    - assets/images/success.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
