--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,8 @@ flutter:
     - assets/images/back.png
     - assets/images/map.png
     - assets/images/success.gif
+    - assets/images/done.gif
+    - assets/images/done2.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
