--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   carousel_slider: ^4.0.0
   curved_navigation_bar: ^1.0.3
   intl: ^0.17.0
+  mapmyindia_gl: ^0.3.0
+  location: 4.0.0
+  supercharged: ^2.0.0
+  path_provider: ^2.0.0
+  http: ^0.13.0
+  collection: ^1.0.0
 
 dev_dependencies:
   flutter_test:
