--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
     - assets/images/done2.gif
     - assets/images/demo_car.png
     - assets/images/imagesGreen.png
+    - assets/images/imagesRed.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
