--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
     - assets/images/demo_car.png
     - assets/images/imagesGreen.png
     - assets/images/imagesRed.png
+    - assets/images/lambo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
